--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,20 +14,20 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.18
+        go-version: '>=1.19.0'
 
     - name: Build
       run: go build -v ./...
 
-    # - name: Generate coverage report
-    #   run: |
-    #        go test `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
-    # - name: Upload coverage report
-    #   uses: codecov/codecov-action@v1.0.2
-    #   with:
-    #     token: ${{ secrets.CODECOV_TOKEN }}
-    #     file: ./coverage.txt
-    #     flags: unittests
-    #     name: codecov-umbrella
+    - name: Generate coverage report
+      run: |
+        CI=false go test -v `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v3.1.4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.txt
+        flags: unittests
+        name: codecov-umbrella
